logs/tracking/build.make.685.log.stderr
In file included from /usr/include/boost/assert.hpp:50:0,
                 from /usr/include/boost/smart_ptr/shared_ptr.hpp:29,
                 from /usr/include/boost/shared_ptr.hpp:17,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:8,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/boost/smart_ptr/shared_ptr.hpp: In instantiation of ‘void boost::shared_ptr<T>::reset(Y*) [with Y = Eigen::Matrix<float, 3, -1>; T = Eigen::Matrix<float, 4, -1>]’:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:76:69:   required from here
/usr/include/boost/smart_ptr/shared_ptr.hpp:624:9: error: comparison between distinct pointer types ‘Eigen::Matrix<float, 3, -1>*’ and ‘boost::shared_ptr<Eigen::Matrix<float, 4, -1> >::element_type* {aka Eigen::Matrix<float, 4, -1>*}’ lacks a cast
         BOOST_ASSERT( p == 0 || p != px ); // catch self-reset errors
         ^
make[2]: *** [CMakeFiles/tracking.dir/src/DepthFilter.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
